<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipCalculator">

    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:padding="16dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/tip_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_question" />


    <TextView
        android:id="@+id/service_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="125dp"
        android:checkedButton="@id/optOK"
        android:orientation="vertical"
        android:text="@string/how_was_the_service"
        android:textSize="14pt"
        app:layout_constraintBottom_toTopOf="@id/round_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price">

        <RadioButton
            android:id="@+id/optAmazing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/amazing_15"

            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/optSuperb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/superb_10"
            android:textSize="10pt"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/optOK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_2_5"
            android:textSize="10pt"/>

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/round_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:checked="true"
        android:padding="20dp"
        android:text="@string/round_up_tip"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnCalcTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_options" />

    <Button
        android:id="@+id/btnCalcTip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_tip"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_tip" />

    <TextView
        android:id="@+id/txtTipValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10pt"
        android:textSize="16sp"
        android:textAlignment="viewEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcTip" />

</androidx.constraintlayout.widget.ConstraintLayout>